# IPDL-Maude

./: README  README.md  case_studies.tex  desc.txt  tech_report.tex
IPDL-Spex/: AUTHORS  README  README.md  configure.ac
IPDL-Spex/lib/: 0gmwn.proof  1gmwn.imod  1gmwn.proof  2gmwN.ipdl  3gmwn.imod  3gmwn.ipdl  3gmwn.proof  4gmwn.ipdl  4gmwn.proof  5gmwn.imod  5gmwn.ipdl  5gmwn.proof  6gmwn.proof  alphaVars.ipdl  auth-to-secure.ipdl  branchSplit.ipdl  caseDist.ipdl  cdTest.ipdl  coinToss.ipdl  congFamilyR.ipdl  cpaSecurity.ipdl  csHelloWorld.ipdl  dhke-otp.ipdl  el-gamal.ipdl  embedTest.ipdl  foldTest.ipdl  genNumbers.ipdl  global.ipdl  gmwN.ipdl  gmwn-defs.imod  gmwn-subs.imod  groupTest.ipdl  idealPlusSimGMWN.imod  insideUnsplit.ipdl  joinCases.ipdl  noDef.ipdl  noThen6gmwn.ipdl  pInt0.imod  pInt1.imod  pInt3.imod  (+20 more)
IPDL-Spex/src/: 0+1gmwn.proof  0gmwn.imod  1gmwN.ipdl  2gmwN.ipdl  2gmwn.imod  2gmwn.proof  3gmwn.ipdl  4gmwn.imod  6gmwn.imod  6gmwn.ipdl  BaseGMWN.maude  Core.maude  Knowledge-base.maude  Makefile.am  Processor.maude  SpeX.maude  X.maude  buildP0Int.ipdl  caseDist.ipdl  circTyping.ipdl  coin-toss.ipdl  coinToss.ipdl  csHelloWorld.ipdl  deltaRealSplit.imod  dhke.ipdl  diverge.ipdl  erew-test-1.maude  erew-test-2.maude  errTest.ipdl  errorCoinToss.ipdl  forSplitType.ipdl  format.maude  gmwN.ipdl  import.ipdl  inshare$.ipdl  lemmaTest.ipdl  modularGMWN.ipdl  moveBranch.ipdl  nfs.ipdl  noThen4gmwn.ipdl  (+20 more)
IPDL-Spex/src/CommonLibs/: ATerm.maude  Formatting.maude  Narrowing.maude  Num.maude  QidList.maude  Term.maude  Tree.maude
IPDL-Spex/src/SAP/: SAP.maude
(+197 files in other folders)
